# brr_conv

./: .gitignore  Cargo.toml
benches/: conv_benchmark.rs
play/: main.rs  plot.rs
src/: lib.rs  main.rs
src/lib/: brr.rs  lib.rs
