[package]
name = "brrConv"
version = "0.1.0"
edition = "2021"

[lib]
name = "brrConvLib"
path = "src/lib.rs"

[[bin]]
name = "brrConvBin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.51"
hound = "3.4.0"
indicatif = "0.16.2"
nibble_vec = "0.1.0"

[dev-dependencies]

criterion = "0.3.5"

[[bench]]
name = "conv_benchmark"
harness = false